--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">ExchangeBook</string>
-    <string name="title_activity_import">ImportActivity</string>
+    <string name="title_activity_new_operation">New Operation</string>
 </resources>
