--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,4 +14,8 @@
     <string name="title_activity_new_operation">Новая Операция</string>
     <string name="title_activity_main_menu">Меню выбора операций</string>
     <string name="title_activity_main">Меню авторизации</string>
+    <string name="currency">Валюта</string>
+    <string name="selection_menu">"Меню "</string>
+    <string name="view_operation">Новая Операция</string>
+    <string name="menu_authorization">Авторизация</string>
 </resources>
