--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -27,7 +27,8 @@
     <string name="Date">Дата</string>
     <string name="twocurrency">ВАЛЮТА</string>
     <string name="sum">Сумма</string>
-    <string name="ГРИВНА">Гривна</string>
+    <string name="ukranian_hgrivna">Гривна</string>
     <string name="twocourse">КУРС</string>
     <string name="UAH">Гривна</string>
+    <string name="title_activity_http_example">Обновить сервер</string>
 </resources>
