--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="twocourse">COURSE</string>
     <string name="UAH">UAH</string>
     <string name="title_activity_http_example">HttpExampleActivity</string>
+    <string name="item_layout_date">Date</string>
+    <string name="layout_item_button2">View</string>
+    <string name="ukranian_hgrivna">UAH</string>
 </resources>
