--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="item_layout_date">Date</string>
     <string name="layout_item_button2">View</string>
     <string name="ukranian_hgrivna">UAH</string>
-    <string name="SAVE">SAVE</string>
+    <string name="Save">Save</string>
     <string name="COURSE">COURSE</string>
     <string name="Comment1">Comment:</string>
     <string name="Operation">Operation</string>
