--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,9 @@
     <string name="Comment1">Comment:</string>
     <string name="Operation">Operation</string>
     <string name="settings">settings</string>
+
+
+    <string name="exit">Выход</string>
+
+
 </resources>
