--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="Date">Date</string>
     <string name="twocurrency">Currency</string>
     <string name="sum">Sum</string>
-    <string name="twocourse">rate</string>
+    <string name="twocourse">Rate</string>
     <string name="UAH">Uah</string>
     <string name="item_layout_date">Date</string>
     <string name="layout_item_button2">View</string>
