--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -8,17 +8,17 @@
     <string name="Comment1">Коментарій:</string>
     <string name="DATE_TIME">Дата Час</string>
     <string name="Date">Дата</string>
-    <string name="NextButton2">Нова Операція</string>
+    <string name="NextButton2">Нова операція</string>
     <string name="NextButton">Вхід</string>
-    <string name="Hello">Добрий день користувач !</string>
+    <string name="Hello">Добрий день!</string>
     <string name="NextButton3">Перегляд операцій</string>
     <string name="Operation">Операція</string>
     <string name="SAVE">Зберегти</string>
     <string name="Save">Зберегти</string>
     <string name="View">Перегляд</string>
     <string name="UAH">Гривна</string>
-    <string name="WelcomeText">Добридень! Будь ласка авторизуйтесь!</string>
-    <string name="WelcomeText1">Будь ласка виберіть цікаву для вас операцію!</string>
+    <string name="WelcomeText">Будь ласка авторизуйтесь!</string>
+    <string name="WelcomeText1">Будь ласка виберіть операцію!</string>
     <string name="exit">Вихiд</string>
     <string name="currency">Валюта</string>
     <string name="filterDate"></string>
@@ -26,7 +26,7 @@
     <string name="layout_item_button2">Перегляд</string>
     <string name="menu_authorization">Авторизація</string>
     <string name="new_exchange">Новий обмін</string>
-    <string name="selection_menu">\"Меню \"</string>
+    <string name="selection_menu">Меню</string>
     <string name="settings">Налаштування</string>
     <string name="sum">Сума</string>
     <string name="title_activity_category_select">Вибір перегляду операцій</string>
