--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,22 @@
 <resources>
     <string name="app_name">ExchangeBook</string>
     <string name="title_activity_new_operation">New Operation</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Main Activity</string>
     <string name="NextButton">Enter</string>
-    <string name="WelcomeText">Good day!Please authorization!</string>
+    <string name="WelcomeText">Please authorize</string>
     <string name="title_activity_category_select">CategorySelectActivity</string>
-    <string name="title_activity_main_menu">MainMenuActivity</string>
+    <string name="title_activity_main_menu">Main Menu Activity</string>
     <string name="NextButton2">New Operation</string>
     <string name="NextButton3">View Operation</string>
     <string name="WelcomeText1">Please take your pick</string>
-    <string name="Hello">\"Good day user! \"</string>
+    <string name="Hello">Good day!</string>
     <string name="Back">Back</string>
     <string name="BackButton">Exit</string>
     <string name="new_exchange">New exchange</string>
-    <string name="currency">currency</string>
-    <string name="selection_menu">Selection menu</string>
+    <string name="currency">Сurrency</string>
+    <string name="selection_menu">Menu</string>
     <string name="view_operation">View Operation</string>
-    <string name="menu_authorization">Menu authorization</string>
+    <string name="menu_authorization">Authorization</string>
     <string name="title_activity_list2">List2</string>
     <string name="View">View</string>
     <string name="Comment">Comment</string>
@@ -33,7 +33,7 @@
     <string name="COURSE">Rate</string>
     <string name="Comment1">Comment:</string>
     <string name="Operation">Operation</string>
-    <string name="settings">settings</string>
+    <string name="settings">Settings</string>
     <string name="exit">Exit</string>
     <string name="SAVE">Save</string>
     <string name="filterDate">FilterDate</string>
